--- a/app/src/main/res/layout/activity_u4__coches.xml
+++ b/app/src/main/res/layout/activity_u4__coches.xml
@@ -55,33 +55,22 @@
             android:layout_gravity="center"
             android:text="Añadir/Sobreescribir"
             android:onClick="addOverAction"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Toast"
-            android:onClick="mostrarFichero"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="bottom|center"
-            android:gravity="bottom">
+            android:orientation="vertical"
+            android:layout_gravity="center">
 
             <Button
-                android:layout_width="@dimen/cero"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="lanzarList"
-                android:text="ListView"
+                android:onClick="lanzarDialog"
+                android:text="Mostrar Datos"
+                android:layout_gravity="center"
                 />
-            <Button
-                android:layout_width="@dimen/cero"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="lanzarSpin"
-                android:text="Spinner"/>
+
 
         </LinearLayout>
 
